--- a/python_flask_formation/templates/base.html
+++ b/python_flask_formation/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <!-- Il est obligatoire de préciser un encodage de caractères et un titre pour la page -->
     <meta charset="utf-8">
-    <title>FalskMusic</title>
+    <title>FlaskMusic</title>
     <!-- Déclaration de la feuille de style du document-->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <!-- Polyfills pour le support de fetch dans les vieux navigateurs -->
@@ -23,7 +23,7 @@
 
         <!-- l'entête de la page: titre, barre de recherche -->
         <header>
-            <h1>FalskMusic</h1>
+            <h1>FlaskMusic</h1>
         </header>
         {% block base %}
         {% endblock %}
