method form from POST to GET

--- a/python_flask_formation/templates/login.html
+++ b/python_flask_formation/templates/login.html
@@ -4,7 +4,7 @@
         <section id="login">
             {% block identification %}
             <h2>Identifiez vous</h2>
-            <form method="POST">
+            <form method="GET">
                 <label for='username'>Identifiant :</label>
                 <input type='text' name='username' id='username' required>
                 <label for='password'>Mot de passe :</label>
